src/main.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Inter", sans-serif;
  color: #ffffff;
}

/* Time Section */

.time_section {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  justify-content: flex-start;
  margin: 0 auto;
  background-image: url("./assets/desktop/bg-image-nighttime.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  max-width: 90rem;
  height: 100vh;
  border: 0.2rem solid red;
}

.time_padding {
  padding: 2em 3em;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100vh;
}

.quote {
  max-width: 35.8125rem;
}

.quote_heading {
  font-weight: 400;
  font-size: clamp(1vw, 1rem, 5vw);
  line-height: 1.7rem;
}

.quote_heading img {
  margin-left: 0.5rem;
  cursor: pointer;
}

.quote_author {
  font-weight: 700;
  margin-top: 1em;
}

/* Time & Button Section */
.time_button_section {
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  flex-wrap: wrap;
  height: 50vh;
}

.time_greeting {
  display: flex;
  align-items: baseline;
  letter-spacing: 0.25rem;
  font-size: clamp(0.5rem, 3vw, 1.2rem);
}

.time_greeting img {
  margin-right: 0.5em;
}

.time {
  font-size: clamp(5rem, 20vw, 12.5rem);
  font-weight: 700;
}

.abbreviation {
  font-size: clamp(1rem, 2vw, 2rem);
  font-weight: 300;
}

.country {
  font-size: clamp(1rem, 5vw, 1.7rem);
  letter-spacing: 0.175em;
  font-weight: 700;
}

.button {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 1rem;
  width: 146px;
  height: 56px;
  background-color: #ffffff;
  border-radius: 1.7em;
  cursor: pointer;
  padding: 1.2em;
}

.arrow_container {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #303030;
  border-radius: 50%;
  width: 2.5rem;
  height: 2.5rem;
}

.button p {
  color: #000000;
  letter-spacing: 0.175em;
  font-weight: 700;
}

/* Info Section */

.info {
  height: 50vh;
  width: 100%;
  padding: 3rem;
  display: grid;
  background-color: gray;

  grid-template-areas:
    "cz dow"
    "doy wn";
}

.cz {
  grid-area: cz;
}
.doy {
  grid-area: doy;
}
.dow {
  grid-area: dow;
}
.wn {
  grid-area: wn;
}

